objects/Billing_Worksheet_Line__c/fields/TM_Line__c.field-meta.xml
<CustomField>
    <fullName>TM_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>TM_Line__c.TM__c</field>
            <operation>equals</operation>
            <valueField>$Source.TM__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (T&amp;M Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>