objects/Billing_Worksheet_Line__c/fields/TM_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>TM_Line_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Use to prevent duplicated TM Lines</description>
    <label>T&amp;M Line ID</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>