objects/Billing_Worksheet_Line__c/fields/TM_Parent_Line__c.field-meta.xml
<CustomField>
    <fullName>TM_Parent_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>T&amp;M Parent Line</label>
    <referenceTo>TM_Line__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (T&amp;M Parent Line)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>