objects/Billing_Worksheet_Line__c/fields/Total_Job_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Job_Hours__c</fullName>
    <label>Total Job Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>