objects/Billing_Worksheet_Line__c/fields/Travel_Hour_Unit_Cost__c.field-meta.xml
<CustomField>
    <fullName>Travel_Hour_Unit_Cost__c</fullName>
    <label>Travel Hour Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>