objects/Billing_Worksheet_Line__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit of Measure</label>
    <referenceTo>Unit_of_Measure__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines (Unit of Measure)</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines2</relationshipName>
    <type>Lookup</type>
</CustomField>