objects/Billing_Worksheet_Line__c/fields/Update_Note__c.field-meta.xml
<CustomField>
    <fullName>Update_Note__c</fullName>
    <description>Data Fix Note</description>
    <label>Update Note</label>
    <length>80</length>
    <type>Text</type>
</CustomField>