objects/Billing_Worksheet_Line__c/fields/Use_Premium_Rate__c.field-meta.xml
<CustomField>
    <fullName>Use_Premium_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Premium Rate</label>
    <type>Checkbox</type>
</CustomField>