objects/Billing_Worksheet_Line__c/fields/Week_Number__c.field-meta.xml
<CustomField>
    <fullName>Week_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Week Number</label>
    <referenceTo>Week_Number__c</referenceTo>
    <relationshipLabel>Billing Worksheet Lines</relationshipLabel>
    <relationshipName>Billing_Worksheet_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>