objects/Billing_Worksheet_Line__c/fields/xDescription__c.field-meta.xml
<CustomField>
    <fullName>xDescription__c</fullName>
    <label>xDescription</label>
    <length>250</length>
    <type>Text</type>
</CustomField>