objects/Billing_Worksheet_Line__c/fields/xPremium_Rate__c.field-meta.xml
<CustomField>
    <fullName>xPremium_Rate__c</fullName>
    <label>xDouble Time Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>