objects/Billing_Worksheet_Line__c/fields/xRegular_Rate__c.field-meta.xml
<CustomField>
    <fullName>xRegular_Rate__c</fullName>
    <label>xRegular Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>