objects/Billing_Worksheet_Line__c/fields/xUnit_Cost__c.field-meta.xml
<CustomField>
    <fullName>xUnit_Cost__c</fullName>
    <label>xUnit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>