objects/Billing_Worksheet_Line__c/fields/xUnit_Price__c.field-meta.xml
<CustomField>
    <fullName>xUnit_Price__c</fullName>
    <label>xUnit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>