objects/Billing_Worksheet_Line__c/validationRules/Check_Bundled.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Bundled</fullName>
    <active>true</active>
    <errorConditionFormula>Bill_as_Lump_Sum__c == TRUE &amp;&amp; Bundle_Line__c == NULL &amp;&amp; DATEVALUE(CreatedDate) &gt;= DATE(2023, 12, 01)</errorConditionFormula>
    <errorMessage>Bundled must not be checked when Bundle Line is blank.</errorMessage>
</ValidationRule>